--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "angular-quickstart",
   "version": "1.0.0",
+  "engines": {
+    "node": "~6.11.0"
+  },
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "tsc -p src/",
