--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "npm run build:watch && npm run serve",
+    "start": "concurrently \" npm run build:watch \" \"npm run serve\"",
     "//": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
@@ -28,9 +28,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/compiler-cli":"~4.3.4",
     "@angular/common": "~4.3.4",
     "@angular/compiler": "~4.3.4",
+    "@angular/compiler-cli": "~4.3.4",
     "@angular/core": "~4.3.4",
     "@angular/forms": "~4.3.4",
     "@angular/http": "~4.3.4",
@@ -38,9 +38,10 @@
     "@angular/platform-browser-dynamic": "~4.3.4",
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
-    "systemjs": "0.19.40",
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
+    "systemjs": "0.19.40",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
