--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-quickstart",
   "version": "1.0.0",
   "engines": {
-    "node": "~6.11.5"
+    "node": "6.11.5"
   },
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
@@ -39,6 +39,7 @@
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
+    "polyfills": "^2.1.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "web-animations-js": "^2.3.1",
