--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \" npm run build:watch \" \"npm run serve\"",
+    "start2": "concurrently \" npm run build:watch \" \"npm run serve\"",
+    "start": "npm install concurrently; npm run start2",
     "//": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
