--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start2": "concurrently \" npm run build:watch \" \"npm run serve\"",
-    "start": "npm install concurrently; npm run start2",
+    "start": "concurrently \" npm run build:watch \" \"npm run serve\"",
     "//": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
@@ -29,6 +28,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@angular/cli": "~1.5.0",
     "@angular/common": "~4.3.4",
     "@angular/compiler": "~4.3.4",
     "@angular/compiler-cli": "~4.3.4",
@@ -39,7 +39,10 @@
     "@angular/platform-browser-dynamic": "~4.3.4",
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
+    "angular-polyfills": "^1.0.1",
     "core-js": "^2.4.1",
+    "install": "^0.10.1",
+    "npm": "^5.5.1",
     "polyfills": "^2.1.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
@@ -47,7 +50,6 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
     "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.46",
     "canonical-path": "0.0.2",
