--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,12 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "noImplicitAny": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
     "suppressImplicitAnyIndexErrors": true
-  }
+  },
+  "include": [
+      "src/**/*",
+      "node_modules/jqwidgets-scripts/**/*"
+  ]
 }
